@@ -1,6 +1,8 @@
 Giraph Change Log
 
 Release 1.1.0 - unreleased
+  GIRAPH-964: Remove quotes from output partition specification in hive-io (majakabiljo)
+
   GIRAPH-963: Aggregators may not be initialized properly (edunov via majakabiljo)
 
   GIRAPH-955: Allow vertex/edge/message value to be configurable (ikabiljo via majakabiljo)
